United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 6927049 assert(is_Loop(),"invalid node class")
6927049 : assert(is_Loop(),"invalid node class")

Details
Type:
Bug
Submit Date:
2010-02-16
Status:
Closed
Updated Date:
2011-03-08
Project Name:
JDK
Resolved Date:
2011-03-08
Component:
hotspot
OS:
generic
Sub-Component:
compiler
CPU:
generic
Priority:
P3
Resolution:
Fixed
Affected Versions:
hs17
Fixed Versions:
hs17

Related Reports
Backport:
Backport:
Backport:
Backport:
Backport:
Backport:

Sub Tasks

Description
While testing G1 I'm hitting the following assert:

# To suppress the following error report, specify this argument
# after -XX: or in .hotspotrc:  SuppressErrorAt=/node.hpp:721
==============================================================================
Unexpected Error
------------------------------------------------------------------------------
Internal Error at node.hpp:721, pid=12290, tid=29 
Error: assert(is_Loop(),"invalid node class")

Do you want to debug the problem?

To debug, run 'dbx - 12290'; then switch to thread 29
Enter 'yes' to launch dbx automatically (PATH must include dbx)
Otherwise, press RETURN to abort...
==============================================================================

I can reproduce it with a sparcv9 / solaris / 64-bit / fastdebug / server build running the dacapo eclipse. Here's the command line:

java -XX:+UseG1GC -XX:+UnlockDiagnosticVMOptions -XX:+VerifyBeforeGC -XX:+VerifyDuringGC -XX:+VerifyAfterGC -d64 -XX:+PrintGCTimeStamps -XX:+PrintGCDetails -XX:+ShowMessageBoxOnError -jar dacapo-2006-10.jar -s default eclipse

                                    

Comments
EVALUATION

ChangeSet=http://hg.openjdk.java.net/jdk7/hotspot-comp/hotspot/rev/b71f13525cc8,ChangeRequest=6927049
                                     
2010-02-19
EVALUATION

6927049: assert(is_Loop(),"invalid node class")
Reviewed-by: kvn

The loop predication code is missing a guard for is_Loop since it's
possible that the loop might simply by a Region if there are
irreducible loops in the loop tree.  I also moved the other loop type
guards up so they would be together before any traps count logic.
Tested with failing test from report.

src/share/vm/opto/loopTransform.cpp
                                     
2010-02-19



Hardware and Software, Engineered to Work Together