6927049: assert(is_Loop(),"invalid node class")

Reviewed-by: kvn